--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
-background {
-    color: blue;
+body {
+    background-color: rebeccapurple;
+    font-family: Gill Sans, sans-serif;
+}
+
+p {
+    color: darkseagreen;
+}
+
+h3 {
+    color: darkseagreen;
+}
+
+h1 {
+    color: darkseagreen;
+}
+
+li {
+    color: darkseagreen;
 }
