--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@ body {
     font-family: Gill Sans, sans-serif;
 }
 
-p, h1, h2, h3, h4, h5, li, ol, a {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+li,
+ol,
+a {
     color: whitesmoke;
 }
